--- a/App1/package.json
+++ b/App1/package.json
@@ -15,10 +15,12 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.8.6",
+    "date-fns": "^2.29.3",
     "expo": "~46.0.16",
     "expo-barcode-scanner": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.13.0",
+    "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-dialog": "^9.3.0",
