--- a/App2/app.json
+++ b/App2/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "app2",
-    "slug": "app2",
+    "name": "App2",
+    "slug": "App2",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
